--- a/index.html
+++ b/index.html
@@ -518,7 +518,15 @@ section{
     <!-- end -->
 
     <script>
-        
+        let navbar = document.querySelector('.header .navbar');
+
+document.querySelector('#menu-btn').onclick = () =>{
+  navbar.classList.add('active');
+}
+
+document.querySelector('#close-navbar').onclick = () =>{
+  navbar.classList.remove('active');
+}
     </script>
 </body>
 </html>
