--- a/index.html
+++ b/index.html
@@ -496,7 +496,8 @@ section{
           <div class="info row">
             <div class="col-md-4">
               <div class="row ">
-                <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=350&amp;height=400&amp;hl=en&amp;q=Central Coffee house, 11, AB Rd, GPO Square, Opposite GPO, Parsi Mohalla, Chhawni, Indore, Madhya Pradesh 452001, India&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div><style>.mapouter{position:relative;text-align:right;width:350px;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:350px;height:400px;}.gmap_iframe 
+                <div class="mapouter"><div class="gmap_canvas">
+			<iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/d/embed?mid=1IM4x3eQzJjbDhswOFNSnNRv58T-31F8&ehbc=2E312F&noprof=1"></iframe></div><style>.mapouter{position:relative;text-align:right;width:350px;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:350px;height:400px;}.gmap_iframe 
                 {width:350px!important;height:400px!important;}</style></div></div>
             </div>
             <div class="col-lg-6">
