--- a/index.html
+++ b/index.html
@@ -497,8 +497,7 @@ section{
             <div class="col-md-4">
               <div class="row ">
                 <div class="mapouter"><div class="gmap_canvas">
-			<iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/d/embed?mid=1IM4x3eQzJjbDhswOFNSnNRv58T-31F8&ehbc=2E312F&noprof=1"></iframe></div><style>.mapouter{position:relative;text-align:right;width:350px;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:350px;height:400px;}.gmap_iframe 
-                {width:350px!important;height:400px!important;}</style></div></div>
+			<iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/d/embed?mid=1IM4x3eQzJjbDhswOFNSnNRv58T-31F8&ehbc=2E312F&noprof=1"></iframe></div><style>.mapouter{position:relative;text-align:right;width:350px;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:350px;height:400px;}.gmap_iframe{width:350px!important;height:400px!important;}</style></div></div>
             </div>
             <div class="col-lg-6">
             <p>HOURS</p>
